[tool.poetry]
name = "maldi-learn"
version = "0.1.0"
description = "Software library for MALDI-TOP preprocessing and machine learning analysis."
authors = ["Caroline Weis <caroline.weis@bsse.ethz.ch>", "Max Horn <max.horn@bsse.ethz.ch>", "Dr. Bastian Alexander Rieck <bastian.rieck@bsse.ethz.ch>"]
readme = "README.md"
repository = "https://github.com/BorgwardtLab/maldi-learn"
homepage = "https://github.com/BorgwardtLab/maldi-learn"

[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "^0.22.1"
topf = {git = "https://github.com/BorgwardtLab/Topf.git"}
[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
